WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64626
An arrow key collapses directionless selection range in the wrong direction in BiDi
https://bugs.webkit.org/show_bug.cgi?id=64626
Summary
An arrow key collapses directionless selection range in the wrong direction i...
Ryosuke Niwa
Reported
2011-07-15 14:13:14 PDT
When a selection range is collapsed by an arrow key, the the caret appears on the wrong direction if the text's direction is different from that of block. e.g. if we had RTL text CBA in a LTR block, and B was selected, pressing left-arrow key collapses the selection on the right of B.
Attachments
fixes the bug
(9.12 KB, patch)
2011-07-15 17:17 PDT
,
Ryosuke Niwa
darin
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xiaomei Ji
Comment 1
2011-07-15 15:12:48 PDT
currently, when pressing left arrow, webkit collapses the selection to the logical beginning in LTR context, and collapse the selection to the logical end in RTL context. Amnon, Jeremy, and Aharon all agree that: collapsing the selection in the visual direction is what is expected to happen.
Ryosuke Niwa
Comment 2
2011-07-15 17:17:45 PDT
Created
attachment 101075
[details]
fixes the bug
WebKit Review Bot
Comment 3
2011-07-15 18:17:42 PDT
Comment on
attachment 101075
[details]
fixes the bug
Attachment 101075
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9092544
New failing tests: editing/selection/collapse-selection-in-bidi.html
Ryosuke Niwa
Comment 4
2011-07-28 19:38:53 PDT
Ping reviewers
Ryosuke Niwa
Comment 5
2011-08-16 16:07:19 PDT
Ping reviewers.
Darin Adler
Comment 6
2011-08-17 09:40:59 PDT
Comment on
attachment 101075
[details]
fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=101075&action=review
Seems fine.
> Source/WebCore/editing/FrameSelection.cpp:379 > + int offset = 0;
Seems non-helpful to initialize this to 0.
Ryosuke Niwa
Comment 7
2011-08-17 11:07:38 PDT
Committed
r93221
: <
http://trac.webkit.org/changeset/93221
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug