An arrow key collapses directionless selection range in the wrong direction in BiDi https://bugs.webkit.org/show_bug.cgi?id=64626

Reviewed by Darin Adler.

Source/WebCore:

The bug was caused by willBeModified's always using block direction to determine
the direction to which the selection is collapsed. Fixed the bug by calling directionOfSelection
in willBeModified, which will return the text direction of the surrounding context when
the start and the end have the same direction. When the text directions at the start and at the end
of selection do not match, it uses the block's text direction.

Test: editing/selection/collapse-selection-in-bidi.html

* editing/FrameSelection.cpp:
(WebCore::FrameSelection::directionOfSelection): Added.
(WebCore::FrameSelection::willBeModified): Calls directionOfSelection.
(WebCore::FrameSelection::modifyMovingRight): Ditto.
(WebCore::FrameSelection::modifyMovingLeft): Ditto.
* editing/FrameSelection.h:

LayoutTests:

Added a test to ensure collapsing directionless selection respects the direction of text around
the selection's end points.

* editing/selection/collapse-selection-in-bidi-expected.txt: Added.
* editing/selection/collapse-selection-in-bidi.html: Added.


Canonical link: https://commits.webkit.org/82223@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93221 268f45cc-cd09-0410-ab3c-d52691b4dbfc